Fix vertical alignment of notice component (#75276)
* Vertical alignment of notice component

* Vertical alignment of notice component

--- a/client/landing/subscriptions/notice/style.scss
+++ b/client/landing/subscriptions/notice/style.scss
@@ -10,11 +10,15 @@
 		padding: 16px 20px;
 		gap: 16px;
 		margin-bottom: 20px;
-		background: var(--studio-gray-0);
+		background: $studio-gray-0;
+
+		&-icon {
+			height: 20px;
+		}
 
 		&-content {
-			font-size: var(--font-body-small);
-			line-height: var(--font-title-small);
+			font-size: $font-body;
+			line-height: $font-title-small;
 			letter-spacing: -0.15px;
 		}
 
